--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="img/logo.png" alt="Logo JVMBox" class="logo" />
+    <img src="Img/logo.png" alt="Logo JVMBox" class="logo" />
     <h1>JVMBox</h1>
     <p>Una máquina virtual Linux ejecutada con Java y QEMU portable.</p>
     <a href="#descargar" class="btn">Descargar</a>
