--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <section id="descargar" class="fade-in">
       <h2>Descargar JVMBox</h2>
       <p>Incluye GUI, QEMU portable, disco virtual, y soporte para ISO.</p>
-      <a href="https://tuservidor.com/JVMBox.zip" class="btn">Descargar ahora</a>
-    </section>
+      <a href="https://github.com/Daymiro04/JVMBox/releases/" class="btn">Descargar ahora</a>
+    </section
 
     <!-- Capturas -->
     <section id="capturas" class="fade-in">
@@ -84,8 +84,8 @@
       <p>¿Tienes dudas o quieres colaborar?</p>
       <ul>
         <li>✉️ Email: jvmbox@tucorreo.com</li>
-        <li>💬 Discord: <a href="https://discord.gg/tuinvitacion" target="_blank">Servidor JVMBox</a></li>
-        <li>🐙 GitHub: <a href="https://github.com/Daymiro04/" target="_blank">@tuusuario</a></li>
+        <li>💬 Discord: <a href="https://discord.gg/tuinvitacion" target="_blank">JVMBox server</a></li>
+        <li>🐙 GitHub: <a href="https://github.com/Daymiro04/" target="_blank">@Daymiro04</a></li>
       </ul>
     </section>
   </main>
