--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="descargar" class="fade-in">
       <h2>Descargar JVMBox</h2>
       <p>Incluye GUI, QEMU portable, disco virtual, y soporte para ISO.</p>
-      <a href="https://github.com/Daymiro04/JVMBox/releases/" class="btn">Descargar ahora</a>
+      <a href="https://github.com/Daymiro04/JVMBox/releases/download/JVMBox/JVMBox.jar" class="btn">Descargar ahora</a>
     </section
 
     <!-- Capturas -->
