--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="descargar" class="fade-in">
       <h2>Descargar JVMBox</h2>
       <p>Incluye GUI, QEMU portable, disco virtual, y soporte para ISO.</p>
-      <a href="https://github.com/Daymiro04/JVMBox/releases/download/JVMBox/JVMBox.jar" class="btn">Descargar ahora</a>
+      <a href="https://release-assets.githubusercontent.com/github-production-release-asset/1033910221/2d0e35f8-3775-4823-a370-c92a4621ba8c?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-09-06T03%3A14%3A33Z&rscd=attachment%3B+filename%3DJVMBox.jar&rsct=application%2Foctet-stream&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-09-06T02%3A14%3A08Z&ske=2025-09-06T03%3A14%3A33Z&sks=b&skv=2018-11-09&sig=KucpDtnTeLxfD%2BOyyC1wzLlUyxaPhQf7rul7u5Ci6GE%3D&jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc1NzEyNTE0OSwibmJmIjoxNzU3MTI0ODQ5LCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.2PnYVMjdowJczxZ75VWi1kqWVGVFlpYD8XyPX_DKZWc&response-content-disposition=attachment%3B%20filename%3DJVMBox.jar&response-content-type=application%2Foctet-stream" class="btn">Descargar ahora</a>
     </section
 
     <!-- Capturas -->
